@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-28T08:22:27Z",
+  "timestamp" : "2023-09-29T01:16:04Z",
   "count_outdated" : 508,
   "uniques_outdated" : 242,
-  "count" : 531,
+  "count" : 532,
   "uniques" : 253,
   "clones" : [
     {
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2023-09-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
